Fixes #3: Added new overflow-beahviour...
...also added new highlight-color.

--- a/resources/sass/components.projectMenue.scss
+++ b/resources/sass/components.projectMenue.scss
@@ -112,10 +112,13 @@ These are the styles for the project pattern navigation.
 
 	&.active {
 
+		color: $c-positive;
+		color: var(--positive, $c-positive);
 		opacity: 1 !important;
 
 		> .patterns--sub {
-
+			
+			color: #fff;
 			max-height: 120em;
 
 		}
